force-app/main/default/objects/Woodshop_Project_Tools__c/Woodshop_Project_Tools__c.object-meta.xml
<CustomObject>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose: Will house all the tools that could be used on a woodshop project</description>
    <label>Woodshop Project Tools</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Woodshop Project Tools Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Woodshop Project Tools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>