force-app/main/default/objects/Woodshop_Project_Tools__c/fields/Available_for_Use__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Use__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprentice 2021
Purpose:  Will show whether a tool is available for use IF, Quantity_Available__c&gt;0</description>
    <formula>Quantity_Available__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available for Use?</label>
    <type>Checkbox</type>
</CustomField>