force-app/main/default/objects/Woodshop_Project_Tools__c/fields/Quantity_Available__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Available__c</fullName>
    <description>Created By: HNS
Business Unit:  Salesforce Oakland Apprenticeship 2021
Purpose:  Will show how much quantity is available for each tool record.</description>
    <label>Quantity Available</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>