force-app/main/default/objects/Woodshop_Project_Tools__c/fields/Tool_Cost__c.field-meta.xml
<CustomField>
    <fullName>Tool_Cost__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Will give the cost for each tool record</description>
    <label>Tool Cost</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>