force-app/main/default/objects/Woodshop_Project_Tools__c/fields/Tool_ID__c.field-meta.xml
<CustomField>
    <fullName>Tool_ID__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship
Purpose:  Will create an ID number for each tool record</description>
    <displayFormat>T-{0000}</displayFormat>
    <label>Tool ID</label>
    <type>AutoNumber</type>
</CustomField>