force-app/main/default/objects/Woodshop_Project_Tools__c/fields/Woodshop_Projects__c.field-meta.xml
<CustomField>
    <fullName>Woodshop_Projects__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose: Will allow a user to show what tools are being used on what projects</description>
    <label>Woodshop Projects</label>
    <referenceTo>Woodshop_Projects__c</referenceTo>
    <relationshipLabel>Woodshop Project Tools</relationshipLabel>
    <relationshipName>Woodshop_Project_Tools</relationshipName>
    <type>Lookup</type>
</CustomField>